force-app/main/default/objects/Historico_Action_Plan__c/Historico_Action_Plan__c.object-meta.xml
<CustomObject>
    <label>Histórico Action Plan</label>
    <nameField>
        <label>Historico Action Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historico Action Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>