force-app/main/default/objects/Historico_Action_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historico Action Plan</relationshipLabel>
    <relationshipName>Historico_Action_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>