force-app/main/default/objects/Historico_Action_Plan__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Historico Action Plan</relationshipLabel>
    <relationshipName>Historico_Action_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>