force-app/main/default/objects/Historico_Action_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Historico Action Plan</relationshipLabel>
    <relationshipName>Historico_Action_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>