force-app/main/default/objects/Historico_Action_Plan__c/fields/CreatedDate_y_Campaing__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_y_Campaing__c</fullName>
    <formula>TEXT(CreatedDate) +&apos;-&apos; + Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDate y Campaing</label>
    <type>Text</type>
</CustomField>