force-app/main/default/objects/Historico_Action_Plan__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <formula>if( Oportunidad__c==null,&apos;Sin Oportunidad&apos;, text(Oportunidad__r.StageName) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etapa</label>
    <type>Text</type>
</CustomField>