force-app/main/default/objects/Historico_Action_Plan__c/fields/Fabricante_Text__c.field-meta.xml
<CustomField>
    <fullName>Fabricante_Text__c</fullName>
    <label>Fabricante Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>