force-app/main/default/objects/Historico_Action_Plan__c/fields/Fabricantes__c.field-meta.xml
<CustomField>
    <fullName>Fabricantes__c</fullName>
    <label>Fabricantes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fabricantes_de_Licencias</valueSetName>
    </valueSet>
</CustomField>