force-app/main/default/objects/Historico_Action_Plan__c/fields/Fecha_1__c.field-meta.xml
<CustomField>
    <fullName>Fecha_1__c</fullName>
    <formula>CreatedDate -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha-1</label>
    <type>Date</type>
</CustomField>