force-app/main/default/objects/Historico_Action_Plan__c/fields/Fecha_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Snapshot__c</fullName>
    <label>Fecha Snapshot</label>
    <type>Date</type>
</CustomField>