force-app/main/default/objects/Historico_Action_Plan__c/fields/Fecha_Ultima_semana__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_semana__c</fullName>
    <formula>CreatedDate -3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Ultima semana</label>
    <type>Date</type>
</CustomField>