force-app/main/default/objects/Historico_Action_Plan__c/fields/Knowledge_Area__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Area__c</fullName>
    <label>Knowledge Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agile Solutions Tools (Jira)</fullName>
            </value>
            <value>
                <fullName>API Gateway &amp; Integration (Mulesoft, CA (Api Gateway), ApiGee)</fullName>
            </value>
            <value>
                <fullName>Backend Development (Java OpenStack, .Net, Microservices)</fullName>
            </value>
            <value>
                <fullName>Blockchain (Tokenization, SmartContracts, NFTs)</fullName>
            </value>
            <value>
                <fullName>BPM (Appian, Mendix, Pega, Outsystems)</fullName>
            </value>
            <value>
                <fullName>Branding Services</fullName>
            </value>
            <value>
                <fullName>Business Consulting</fullName>
            </value>
            <value>
                <fullName>CIB Solutions (Trading, Clearing, Real Time Market Data, Risk Management)</fullName>
            </value>
            <value>
                <fullName>Cloud Architecture &amp; Data Consultancy &amp; Design</fullName>
            </value>
            <value>
                <fullName>Cognitive Agents (Chatbot, Avatars, Google DialogFlow, IBM Watson)</fullName>
            </value>
            <value>
                <fullName>CRM (Salesforce, Microsoft Dynamics, Siebel)</fullName>
            </value>
            <value>
                <fullName>CyberSecurity</fullName>
            </value>
            <value>
                <fullName>Data Analytics &amp; BI (PowerBI, Azure Data, Snowflake, Qlik)</fullName>
            </value>
            <value>
                <fullName>Data Architecture Cloud &amp; On-Permise (Powercenter, Databricks, Snowflake, Google Cloud, Informatica BDM)</fullName>
            </value>
            <value>
                <fullName>Data Governance &amp; Modeling (IBM Cloud Pack, Informatica)</fullName>
            </value>
            <value>
                <fullName>Digital Business Platforms (Adobe, Liferay)</fullName>
            </value>
            <value>
                <fullName>Digital Consulting</fullName>
            </value>
            <value>
                <fullName>Document Solutions (Documentum, Captiva, xECM)</fullName>
            </value>
            <value>
                <fullName>Ecommerce (Salesforce Commerce, SAP Customer Experience, Magento, Commerce Tools)</fullName>
            </value>
            <value>
                <fullName>Enterprise Search (Elastic Search, SolR)</fullName>
            </value>
            <value>
                <fullName>ERP Solutions (SAP)</fullName>
            </value>
            <value>
                <fullName>Front End Development (Vue, React, Angular)</fullName>
            </value>
            <value>
                <fullName>IA/ML Cloud &amp; IA Custom Solutions (Azure ML, TensorFlow, Keras, Google Vertex, KL30)</fullName>
            </value>
            <value>
                <fullName>Infrastructure Cloud &amp; OnPremise (Terraform, Ansible, Cloud providers, Containers, Openshift, VMWare Tanzu)</fullName>
            </value>
            <value>
                <fullName>IoT (Barbara IoT)</fullName>
            </value>
            <value>
                <fullName>Mobile (Android, IOS, Kotlin, Ionic)</fullName>
            </value>
            <value>
                <fullName>PMO &amp; Agile Offices (Scrum, Project Management)</fullName>
            </value>
            <value>
                <fullName>Portal Enterprise Platform (Oracle Webcenter, Office 365)</fullName>
            </value>
            <value>
                <fullName>Portal Open Source (Magnolia, Wordpress, PHP)</fullName>
            </value>
            <value>
                <fullName>Process Mining (Celonis, Signavio)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>