force-app/main/default/objects/Historico_Action_Plan__c/fields/Mercado__c.field-meta.xml
<CustomField>
    <fullName>Mercado__c</fullName>
    <label>Mercado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mercados</valueSetName>
    </valueSet>
</CustomField>