force-app/main/default/objects/Historico_Action_Plan__c/fields/Mercado_text__c.field-meta.xml
<CustomField>
    <fullName>Mercado_text__c</fullName>
    <label>Mercado text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>