force-app/main/default/objects/Historico_Action_Plan__c/fields/Nombre_Campa_a__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Campa_a__c</fullName>
    <label>Nombre Campaña</label>
    <length>30</length>
    <type>Text</type>
</CustomField>