force-app/main/default/objects/Historico_Action_Plan__c/fields/Nombre_Tarea__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Tarea__c</fullName>
    <label>Nombre Tarea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>