force-app/main/default/objects/Historico_Action_Plan__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Historico Action Plan</relationshipLabel>
    <relationshipName>Historico_Action_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>