force-app/main/default/objects/Historico_Action_Plan__c/fields/Oportunidad_Generada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Generada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad Generada</label>
    <type>Checkbox</type>
</CustomField>