force-app/main/default/objects/Historico_Action_Plan__c/fields/Oportunidad_Generada_ac__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Generada_ac__c</fullName>
    <formula>Oportunidad__c !=null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp generated</label>
    <type>Checkbox</type>
</CustomField>