force-app/main/default/objects/Historico_Action_Plan__c/fields/Propietario__c.field-meta.xml
<CustomField>
    <fullName>Propietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Historico_Action_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>