force-app/main/default/objects/Historico_Action_Plan__c/fields/Sede__c.field-meta.xml
<CustomField>
    <fullName>Sede__c</fullName>
    <label>Sede</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sede</valueSetName>
    </valueSet>
</CustomField>