force-app/main/default/objects/Historico_Action_Plan__c/fields/Sede_Text__c.field-meta.xml
<CustomField>
    <fullName>Sede_Text__c</fullName>
    <label>Sede_Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>