force-app/main/default/objects/Historico_Action_Plan__c/fields/Semana__c.field-meta.xml
<CustomField>
    <fullName>Semana__c</fullName>
    <formula>TEXT(DAY(Fecha_7__c))+&quot;/&quot;+ TEXT(MONTH( Fecha_7__c )) +&quot;/&quot; +TEXT(YEAR(Fecha_7__c)) +TEXT(DAY(Fecha_1__c))+&quot;/&quot;+ TEXT(MONTH( Fecha_1__c )) +&quot;/&quot; +TEXT(YEAR(Fecha_1__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semana</label>
    <type>Text</type>
</CustomField>