force-app/main/default/objects/Historico_Action_Plan__c/fields/Solucion__c.field-meta.xml
<CustomField>
    <fullName>Solucion__c</fullName>
    <label>Solucion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Soluciones</valueSetName>
    </valueSet>
</CustomField>