force-app/main/default/objects/Historico_Action_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En progreso</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <label>Abierta</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Completada</label>
            </value>
            <value>
                <fullName>Abierta</fullName>
                <isActive>false</isActive>
                <label>Abierta</label>
            </value>
            <value>
                <fullName>Completada</fullName>
                <isActive>false</isActive>
                <label>Completada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>