force-app/main/default/objects/Historico_Action_Plan__c/fields/Strategic_Porfolio_BIG7__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Porfolio_BIG7__c</fullName>
    <label>Strategic_Porfolio_BIG7</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Strategic_Porfolio_BIG7</valueSetName>
    </valueSet>
</CustomField>