force-app/main/default/objects/Historico_Action_Plan__c/fields/Tarea__c.field-meta.xml
<CustomField>
    <fullName>Tarea__c</fullName>
    <label>Tarea</label>
    <length>25</length>
    <type>Text</type>
</CustomField>